# ftype-to-assessment

./: .gitignore  LICENSE  README.md  README.org  pyproject.toml
R/: assign_ssection_to_ftype.R  create_crosswalk_table.R  download_fia_data.R  ftype_to_aa_crosswalk.R  map_ftype_to_ssection.R  run_assessment_areas.R
data/: fia_fortyp_to_common_name.json  ftype_to_assessment_crosswalk.csv  rfia_assessment_areas_subset.json
data/CAR_supersections/: CAR_supersections_coded.dbf  CAR_supersections_coded.shx
data/ancillary/: 2015_assessment_area_data_file.csv  states.json
doc/: ForestType_To_Assessment_Crosswalk_Doc.Rmd  ForestType_To_Assessment_Crosswalk_Doc.md
src/ftypeaa/: .AATools.org.~undo-tree~  .aatools.py.~undo-tree~  AATools.org  aatools.py
src/ftypeaa/data/: .ftype_to_aa.csv.~undo-tree~  .ftype_to_assessment_crosswalk.csv.~undo-tree~  FIA_ForestType_to_AssessmentArea_Crosswalk.xlsx  arb_fortypcds.json  fia_fortyp_to_common_name.json  fia_spcd_to_name.json  ftype_to_aa.csv  test.json
src/ftypeaa/data/ancillary/: arb_tabling.csv
